force-app/main/default/objects/Account/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>Badge__c</referenceTo>
    <relationshipLabel>Gyms</relationshipLabel>
    <relationshipName>Gyms</relationshipName>
    <type>Lookup</type>
</CustomField>