force-app/main/default/objects/Account/fields/Gym_Id__c.field-meta.xml
<CustomField>
    <fullName>Gym_Id__c</fullName>
    <externalId>true</externalId>
    <label>Gym Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>