force-app/main/default/objects/Account/fields/Gym_Number__c.field-meta.xml
<CustomField>
    <fullName>Gym_Number__c</fullName>
    <label>Gym Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>