force-app/main/default/objects/Account/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leader</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gyms</relationshipLabel>
    <relationshipName>Gyms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>