force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Gyms</relationshipLabel>
    <relationshipName>Gyms</relationshipName>
    <type>Lookup</type>
</CustomField>